# setup-oneapi

./: .pre-commit-config.yaml  DEVELOP.rst  DEVELOPMENT.rst  README.rst  action.yml  index.js  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: main.yml
src/: cleanup.js  install.js  main.js  save_cache.js
test/: CMakeLists.txt
test/compilers/: CMakeLists.txt  a.out  icpx-test.cpp  icx-test.c  icx-test.cpp  mpi-test.sh  mpiifort-test.f90
test/mkl/: CMakeLists.txt  mkl-test.cpp
